# scenius-paper

./: .gitignore  OUTLINE.md  README.md  paper.tex
apps/product/backend/: pyproject.toml
apps/product/backend/app/: agent.py  main.py  server.py
apps/product/backend/app/data/paper/: README.md  conclusion.md  markets_as_apis_the_output.md  references.md  reputation-weighted_aggregation_the_mechanism.md
apps/product/backend/app/simulation/: figures.py
apps/product/backend/app/tools/: simulation.py
apps/product/frontend/: package.json  tsconfig.tsbuildinfo
apps/research/frontend/: index.html  package-lock.json
backend/: .dockerignore
backend/app/: agent.py  main.py
backend/app/tools/: __init__.py
frontend/: .env.production  index.html
frontend/public/: og-image.html
latex_text/: discussion_draft.md  generate_figures.py  limitations_future_work_draft.md  paper.tex
paper-chat/: README.md
paper-chat/backend/: Dockerfile
paper-chat/frontend/: index.html  tsconfig.json  vite.config.ts
paper-video/: package-lock.json  package.json
paper-video/src/: Root.tsx
papers/product/: paper.md
research/: Scenius_Design_Spec.md  duetti_mfi_analysis.md  feedback.md  kalshi_rolling_stone_analysis.md  mulligan_boiling_frog_analysis.md  noise_xyz_analysis.md  paper_review_analysis.md  product_positioning_blog_soundcloud.md  reservoir_billboard_analysis.md  scenius-ye-bully-analysis.md  scenius_simulation.ipynb  scenius_sweep_results.csv  spotify_voting_signal.md  theory.md  umg-buyback-capital-vs-reputation.md  walden_variant_markets_analysis.md
(+77 files in other folders)
