[project]
name = "paper-chat-backend"
version = "0.1.0"
description = "Paper Q&A Chat - ChatKit + OpenAI Agents SDK backend"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.9",
    "openai-chatkit>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "scikit-learn>=1.4",
]
